--- a/WebStore/Views/Home/Details.cshtml
+++ b/WebStore/Views/Home/Details.cshtml
@@ -6,7 +6,7 @@
     <title>Index</title>
 </head>
 <body>
-    <p>Детальные параметры работника</p>
+    <p>Детальные параметры работника:</p>
     <label>@Html.ActionLink("Вернуться к списку", "Index");</label>
     <table>          
         <tr>
