не работает кнопка 404

--- a/WebStore/Views/Customer/Index.cshtml
+++ b/WebStore/Views/Customer/Index.cshtml
@@ -1,8 +1,12 @@
-﻿@model IEnumerable<WebStore.Models.Employee>
+﻿@{
+    ViewData["Title"] = "Список рабочих";
+}
+
+@model IEnumerable<WebStore.Models.Employee>
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewpoint" content="width=device-width" charset="utf-8"/>
+    <meta name="viewpoint" content="width=device-width" charset="utf-8" />
     <title>Index</title>
 </head>
 <body>
