--- a/WebStore/Views/Employee/Index.cshtml
+++ b/WebStore/Views/Employee/Index.cshtml
@@ -11,7 +11,13 @@
 </head>
 <body>
     <p>Привет из представления</p>
-    <table>
+    <table class="table">
+        <tr>
+            <td>Имя</td>
+            <td>Фамилия</td>
+            <td>Отчество</td>
+            <td>Возраст</td>            
+        </tr>
         @foreach (var item in Model)
         {
             <tr>
@@ -19,7 +25,7 @@
                 <td>@item.SurName</td>
                 <td>@item.Patronomic</td>
                 <td>@item.Age</td>
-                <td>@Html.ActionLink("Детали", "Details", new { id = item.Id });</td>
+                <td>@Html.ActionLink("Детали", "Details", new { id = item.Id })</td>
             </tr>
         }
     </table>
