--- a/WebStore/Views/Employee/Index.cshtml
+++ b/WebStore/Views/Employee/Index.cshtml
@@ -26,8 +26,12 @@
                 <td>@item.Patronomic</td>
                 <td>@item.Age</td>
                 <td>@Html.ActionLink("Детали", "Details", new { id = item.Id })</td>
+                <td><a asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-edit"></i></a></td>
+                <td><a asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-cut"></i></a></td>
             </tr>
         }
     </table>
+    <hr />
+    <a asp-action="Edit" class="btn btn-success">Добавить</a>
 </body>
 </html>
