--- a/WebStore/Views/Catalog/ProductDetails.cshtml
+++ b/WebStore/Views/Catalog/ProductDetails.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Products";
+    ViewData["Title"] = "Детали товара";
 }
 
 <section id="advertisement">
@@ -13,9 +13,10 @@
         <div class="row">
             <div class="col-sm-3">
                 <div class="left-sidebar">
-                    <h2>Category</h2>
 
-                    @await Html.PartialAsync("Partial/_CategoryProducts")
+
+                    <!--await Html.PartialAsync("Partial/_CategoryProducts")-->
+                    @await Component.InvokeAsync("Sections")
 
                     @await Html.PartialAsync("Partial/_BrandsProducts")
 
