--- a/WebStore/Views/Catalog/Products.cshtml
+++ b/WebStore/Views/Catalog/Products.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Детали товара";
+    ViewData["Title"] = "Products";
 }
 
 <section id="advertisement">
@@ -14,8 +14,8 @@
             <div class="col-sm-3">
                 <div class="left-sidebar">
                     <h2>Category</h2>
-
-                    @await Html.PartialAsync("Partial/_CategoryProducts")
+                    @await Component.InvokeAsync("Sections")
+                    <!--await Html.PartialAsync("Partial/_CategoryProducts")-->
 
                     @await Html.PartialAsync("Partial/_BrandsProducts")
 
