--- a/WebStore/Views/Home/BlogSingle.cshtml
+++ b/WebStore/Views/Home/BlogSingle.cshtml
@@ -9,9 +9,10 @@
                 <div class="left-sidebar">
                     <h2>Category</h2>
 
-                    @await Html.PartialAsync("Partial/_CategoryProducts")
-
-                    @await Html.PartialAsync("Partial/_BrandsProducts")
+                    @*@await Html.PartialAsync("Partial/_CategoryProducts")
+                    @await Html.PartialAsync("Partial/_BrandsProducts")*@
+                    <vc:sections />
+                    <vc:brands />
 
                     <div class="price-range">
                         <!--price-range-->
