--- a/WebStore/Views/Catalog/Products.cshtml
+++ b/WebStore/Views/Catalog/Products.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Products";
 }
-
+@model WebStore.ViewModels.CatalogViewModel
 <section id="advertisement">
     <div class="container">
         <img src="~/images/shop/advertisement.jpg" alt="" />
@@ -14,10 +14,11 @@
             <div class="col-sm-3">
                 <div class="left-sidebar">
                     <h2>Category</h2>
-                    @await Component.InvokeAsync("Sections")
+                    @*@await Component.InvokeAsync("Sections")*@
+                    <vc:sections/>
                     <!--await Html.PartialAsync("Partial/_CategoryProducts")-->
-
-                    @await Html.PartialAsync("Partial/_BrandsProducts")
+                    @*@await Html.PartialAsync("Partial/_BrandsProducts")*@
+                    <vc:brands />
 
                     <div class="price-range">
                         <!--price-range-->
@@ -37,7 +38,7 @@
             </div>
 
             <div class="col-sm-9 padding-right">
-                @await Html.PartialAsync("Partial/_FeatureItems");
+                @await Html.PartialAsync("Partial/_FeatureItems", Model.Products);
             </div>
         </div>
     </div>
