--- a/WebStore/Views/Home/BlogList.cshtml
+++ b/WebStore/Views/Home/BlogList.cshtml
@@ -7,11 +7,12 @@
         <div class="row">
             <div class="col-sm-3">
                 <div class="left-sidebar">
-                    <h2>Category</h2>                    
+                    <h2>Category</h2>
 
-                    @await Html.PartialAsync("Partial/_CategoryProducts")
-
-                    @await Html.PartialAsync("Partial/_BrandsProducts")
+                    @*@await Html.PartialAsync("Partial/_CategoryProducts")
+                    @await Html.PartialAsync("Partial/_BrandsProducts")*@
+                    <vc:sections />
+                    <vc:brands />
 
                     <div class="price-range">
                         <!--price-range-->
