--- a/WebStore/Views/Shared/Components/Sections/Default.cshtml
+++ b/WebStore/Views/Shared/Components/Sections/Default.cshtml
@@ -9,7 +9,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordian" href="#@parentSection.Name.ToLower()">
+                        <a data-toggle="collapse" data-parent="#accordian" asp-controller="Catalog" asp-action="Products" asp-route-sectionId="@parentSection.Id">
                             <span class="badge pull-right"><i class="fa fa-plus"></i></span>
                             @parentSection.Name
                         </a>
@@ -20,7 +20,7 @@
                         <ul>
                             @foreach(var childSection in parentSection.ChildSections)
                             {
-                                <li><a href="#">childSection.Name </a></li>
+                                <li><a asp-controller="Catalog" asp-action="Products" asp-route-sectionId="@childSection.Id">@childSection.Name </a></li>
                             }
                         </ul>
                     </div>
@@ -32,7 +32,7 @@
         {
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h4 class="panel-title"><a href="#">parentSection.Name</a></h4>
+                    <h4 class="panel-title"><a @parentSection.Id>@parentSection.Name</a></h4>
                 </div>
             </div>
         }
