--- a/WebStore/Views/Home/Login.cshtml
+++ b/WebStore/Views/Home/Login.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model LoginUser
+@{
     ViewData["Title"] = "Login";
 }
 
@@ -11,14 +12,16 @@
                 <div class="login-form">
                     <!--login form-->
                     <h2>Login to your account</h2>
-                    <form action="#">
-                        <input type="text" placeholder="Name" />
-                        <input type="email" placeholder="Email Address" />
+                    <form asp-action="Login">
+                        <label asp-for="UserName" class="control-label"></label>
+                        <input asp-for="UserName" class="form-control" />
+                        <label asp-for="UserEmail" class="control-label"></label>
+                        <input asp-for="UserEmail" class="form-control" />
                         <span>
                             <input type="checkbox" class="checkbox">
                             Keep me signed in
                         </span>
-                        <button type="submit" class="btn btn-default">Login</button>
+                        <button type="submit" class="btn btn-default" asp-controller="Home" asp-action="Login">Login</button>
                     </form>
                 </div><!--/login form-->
             </div>
@@ -29,10 +32,13 @@
                 <div class="signup-form">
                     <!--sign up form-->
                     <h2>New User Signup!</h2>
-                    <form action="#">
-                        <input type="text" placeholder="Name" />
-                        <input type="email" placeholder="Email Address" />
-                        <input type="password" placeholder="Password" />
+                    <form asp-action="Login">
+                        <label asp-for="UserName" class="control-label"></label>
+                        <input asp-for="UserName" class="form-control" />
+                        <label asp-for="UserEmail" class="control-label"></label>
+                        <input asp-for="UserEmail" class="form-control" />
+                        <label asp-for="UserPassword" class="control-label"></label>
+                        <input asp-for="UserPassword" class="form-control" />
                         <button type="submit" class="btn btn-default">Signup</button>
                     </form>
                 </div><!--/sign up form-->
