--- a/WebStore/Views/Catalog/Partial/_FeatureItems.cshtml
+++ b/WebStore/Views/Catalog/Partial/_FeatureItems.cshtml
@@ -9,18 +9,20 @@
             <div class="product-image-wrapper">
                 <div class="single-products">
                     <div class="productinfo text-center">
-                        <img src="~/images/shop/@item.ImageUrl" alt="" />
-                        <h2>@item.Price.ToString("C")</h2>
-                        <p>@item.Name</p>
+                        <a  asp-controller="Catalog" asp-action="ProductDetails" asp-route-id="@item.Id">
+                            <img src="~/images/shop/@item.ImageUrl" alt="" />
+                            <h2>@item.Price.ToString("C")</h2>
+                            <p>@item.Name</p>
+                        </a>
                         <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
                     </div>
-                    <div class="product-overlay">
+                    @*<div class="product-overlay">
                         <div class="overlay-content">
                             <h2>@item.Price.ToString("C")</h2>
                             <p>@item.Name</p>
                             <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
                         </div>
-                    </div>
+                    </div>*@
                 </div>
                 <div class="choose">
                     <ul class="nav nav-pills nav-justified">
