--- a/WebStore/Views/Catalog/Partial/_FeatureItems.cshtml
+++ b/WebStore/Views/Catalog/Partial/_FeatureItems.cshtml
@@ -14,7 +14,12 @@
                             <h2>@item.Price.ToString("C")</h2>
                             <p>@item.Name</p>
                         </a>
-                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
+                        <a 
+                            asp-controller="Cart" 
+                            asp-action="AddToCart" 
+                            asp-route-id="@item.Id" 
+                            asp-route-returnUrl="@Context.Request.Path"
+                            class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
                     </div>
                     @*<div class="product-overlay">
                         <div class="overlay-content">
