--- a/WebStore/Views/Catalog/ProductDetails.cshtml
+++ b/WebStore/Views/Catalog/ProductDetails.cshtml
@@ -74,7 +74,7 @@
                     <div class="col-sm-7">
                         <div class="product-information">
                             <!--/product-information-->
-                            <img src="images/product-details/new.jpg" class="newarrival" alt="" />
+                            <img src="~/images/product-details/new.jpg" class="newarrival" alt="" />
                             <h2>@Model.Name</h2>
                             <p></p>
                             <img src="images/product-details/rating.png" alt="" />
@@ -82,10 +82,10 @@
                                 <span>@Model.Price.ToString("C")</span>
                                 <label>Quantity:</label>
                                 <input type="text" value="3" />
-                                <a type="button" class="btn btn-fefault cart"
-                                    asp-controller="Cart" 
-                                    asp-action="AddToCart" 
-                                    asp-route-id="@Model.Id" 
+                                <a class="btn btn-fefault cart"
+                                    asp-controller="Cart"
+                                    asp-action="AddToCart"
+                                    asp-route-id="@Model.Id"
                                     asp-route-returnUrl="@Context.Request.Path">
                                     <i class="fa fa-shopping-cart"></i>
                                     Add to cart
