--- a/WebStore/Views/Shared/Partial/_Header.cshtml
+++ b/WebStore/Views/Shared/Partial/_Header.cshtml
@@ -65,8 +65,8 @@
                             <li><a href="#"><i class="fa fa-user"></i> Account</a></li>
                             <li><a href="#"><i class="fa fa-star"></i> Wishlist</a></li>
                             <li><a asp-controller="Home" asp-action="Checkout">Checkout</a></li>
-                            <li><a asp-controller="Home" asp-action="Cart">Cart</a></li>
-                            <li><a asp-controller="Home" asp-action="Login">Login</a></li>
+                            <li><a asp-controller="Cart" asp-action="Details">Cart</a></li>
+                            <li><a asp-controller="Account" asp-action="Login">Login</a></li>
                         </ul>
                     </div>
                 </div>
